# TypeSafeRegister

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  conanfile.py
.github/workflows/: build_cmake.yml  codeql-analysis.yml
cmake/: CompilerWarnings.cmake  Conan.cmake  Options.cmake  StandardProjectSettings.cmake
docker/: Dockerfile  build-ci-image.sh  build-dev-image.sh  cppdev-docker
examples/: CMakeLists.txt  generateDefinition.py.in
examples/Nordic/: CMakeLists.txt  main.cpp
examples/STMicro/: CMakeLists.txt  main.cpp
include/: AssignmentOperations.h  BitField.h  BitInfo.h  BitName.h  BitType.h  CompileTimeMap.h  EnumeratedField.h  Register.h  Register.hpp  details.h
include/desktop/: registerImpl.hpp
include/mcu/: registerImpl.hpp
src/: CMakeLists.txt  generateDefinition.py  generateDefinition.py.in  main.cpp
src/include/: McuRegister.hpp  Register.hpp  WinRegister.hpp
templates/: Peripherals.jinja2
templates/generator/: generateDefinition.py.in
templates/peripherals/: single.jinja2
test/: CMakeLists.txt  tests.cpp
